<resources>
    <string name="app_name">Product 3</string>
    <string name="producto3">LoneDev - Product 3</string>
    <string name="lonedev">LoneDev</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="reel1">Reel 1</string>
    <string name="reel2">Reel 2</string>
    <string name="reel3">Reel 3</string>
    <string name="girar">Spin</string>
    <string name="background_image">Image</string>
    <string name="coins">Coins</string>
    <string name="jugador">Player</string>
    <string name="jugar">Play</string>
    <string name="crear">Create</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="history">History</string>
    <string name="seleccion_jugador">Player selection</string>
    <string name="cambio_jugador">Change player</string>
    <string name="spin">Spin to get rewards</string>
    <string name="do_screenshot">Immortalize your achievement!</string>
    <string name="historial_partidas">Game history</string>
    <string name="clasificacion_jugadores">Player leaderboard</string>
    <string name="language_changed">Language changed</string>
    <string name="select_player">Select a player first</string>
    <string name="create_new_player_title">Create new player</string>
    <string name="player_name_hint">Player\'s name</string>
    <string name="create_button_text">Create</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="player_created_toast">Player created</string>
    <string name="player_exists_toast">The player already exists</string>
    <string name="empty_name_toast">The name cannot be empty</string>
    <string name="screenshot_error">Could not capture the screen.</string>
    <string name="victory_title">Game victory</string>
    <string name="victory_0">You won a game with a Jack-o-Win prize!</string>
    <string name="victory_1">You won a game with a Triple prize!</string>
    <string name="victory_2">You won a game with a Double prize!</string>
    <string name="loss_death">The death! You lost 100 coins</string>
    <string name="result_0">Jack-o-Win! You won 500 coins</string>
    <string name="result_1">Triple! You won 100 coins</string>
    <string name="result_2">Double! You won 20 coins</string>
    <string name="try_again">Try again!</string>
    <string name="user_location">The user\'s location is</string>
    <string name="location_unavailable">Location unavailable</string>
    <string name="permission_not_granted">No permissions</string>
    <string name="coins_text">Coins: %1$d</string>
    <string name="game_over">Game over</string>
    <string name="game_over_text">Your coins have reached 0. The player will be deleted.</string>
    <string name="seguir">Continue</string>
    <string name="screenshot_success">Screenshot saved to the gallery.</string>
    <string name="calendar_0">Victory recorded in the calendar</string>
    <string name="calendar_1">Error recording the victory in the calendar</string>
    <string name="calendar_2">No calendar found with the account \'uoc.edu\'</string>
    <string name="calendar_3">Error accessing calendars</string>
    <string name="permission_0">Permissions granted for the calendar</string>
    <string name="permission_1">Permissions denied for the calendar</string>
    <string name="permission_2">Permission granted for notifications</string>
    <string name="permission_3">Permission denied for notifications</string>
    <string name="permission_4">Permission granted for location</string>
    <string name="permission_5">Permission denied for location</string>
    <string name="victories">Victories</string>
    <string name="victories_text">Game victory notifications</string>
    <string name="victory">Victory!</string>
    <string name="victory_text">Congratulations! You won a game.</string>
    <string name="signIn">Login with Google Account</string>
    <string name="bonusActual">Accumulated prize: %d</string>
    <string name="bonusVictory">You\'ve won the accumulated bonus of %d coins!</string>
    <string name="top_ten" translatable="false">Top 10</string>
</resources>
