<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_background"
        android:scaleType="centerCrop"
        android:alpha="0.75"
        android:contentDescription="@string/background_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <!-- Botón de girar -->

        <TextView
            android:id="@+id/coinsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/exo_2_medium"
            android:text="coins: 100"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="371dp"
            android:layout_height="145dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Carrete 1 -->
            <ImageView
                android:id="@+id/reel1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="@drawable/ic_dashboard_black_24dp"
                android:contentDescription="@string/reel1" />

            <!-- Carrete 2 -->
            <ImageView
                android:id="@+id/reel2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="@drawable/ic_dashboard_black_24dp"
                android:contentDescription="@string/reel2" />

            <!-- Carrete 3 -->
            <ImageView
                android:id="@+id/reel3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="@drawable/ic_dashboard_black_24dp"
                android:contentDescription="@string/reel3" />
        </LinearLayout>

        <Button
            android:id="@+id/spinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/purple_700"
            android:padding="12dp"
            android:text="@string/girar"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

</FrameLayout>
