<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.75"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ImageButton
            android:id="@+id/buttonSelectLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_language" />

        <ImageButton
            android:id="@+id/buttonHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_help"
            android:layout_marginStart="16dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/buttonToggleMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_music_pause" />

        <ImageButton
            android:id="@+id/buttonSelectMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_music_directory"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2_bold"
            android:shadowColor="#ffffff"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/lonedev"
            android:textColor="#8A2BE2"
            android:textSize="48sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2_bold"
            android:shadowColor="#ffffff"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/app_name"
            android:textColor="#8A2BE2"
            android:textSize="28sp"
            android:textStyle="italic"
            android:layout_marginBottom="48dp" />

        <TextView
            android:id="@+id/coinsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/exo_2_bold"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="4"
            android:text="coinsTextView"
            android:textColor="#FFD700"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">

            <ImageView
                android:id="@+id/reel1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="@drawable/reel_border"
                android:padding="4dp"
                android:elevation="2dp" />

            <ImageView
                android:id="@+id/reel2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="@drawable/reel_border"
                android:padding="4dp"
                android:elevation="2dp" />

            <ImageView
                android:id="@+id/reel3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="@drawable/reel_border"
                android:padding="4dp"
                android:elevation="2dp" />
        </LinearLayout>

        <Button
            android:id="@+id/spinButton"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="32dp"
            android:text="@string/girar"
            android:textSize="14sp"
            android:textColor="#ffffff"
            android:backgroundTint="#FF7518"
            android:fontFamily="@font/exo_2_bold"
            android:elevation="4dp"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:id="@+id/resultadoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2_bold"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="4"
            android:text="@string/spin"
            android:textColor="#FFD700"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bonusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2_bold"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="4"
            android:text=""
            android:layout_marginTop="12dp"
            android:textColor="#FFA500"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/screenshotLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible"> <!-- visible -->

            <TextView
                android:id="@+id/screenshotTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:fontFamily="@font/exo_2_bold"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="4"
                android:text="@string/do_screenshot"
                android:textColor="#FFD700"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/buttonScreenshot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_screenshot" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/leaderboardButton"
                android:layout_width="180sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/leaderboard"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:backgroundTint="#4B0082"
                android:fontFamily="@font/exo_2_bold"
                android:elevation="10dp" />

            <Button
                android:id="@+id/historyButton"
                android:layout_width="180sp"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:backgroundTint="#4B0082"
                android:fontFamily="@font/exo_2_bold"
                android:elevation="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/topTenButton"
                android:layout_width="180sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/top_ten"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:backgroundTint="#4B0082"
                android:fontFamily="@font/exo_2_bold"
                android:elevation="10dp" />

            <Button
                android:id="@+id/changeUserButton"
                android:layout_width="180sp"
                android:layout_height="wrap_content"
                android:text="@string/cambio_jugador"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:backgroundTint="#4B0082"
                android:fontFamily="@font/exo_2_bold"
                android:elevation="10dp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
