<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.75"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <ImageButton
            android:id="@+id/buttonSelectLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_language" />

        <ImageButton
            android:id="@+id/buttonHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_help"
            android:layout_marginStart="16dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/buttonToggleMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_music_pause" />

        <ImageButton
            android:id="@+id/buttonSelectMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_music_directory"
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginStart="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2_bold"
            android:shadowColor="#ffffff"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/lonedev"
            android:textColor="#8A2BE2"
            android:textSize="48sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_2_bold"
            android:shadowColor="#ffffff"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/app_name"
            android:textColor="#8A2BE2"
            android:textSize="28sp"
            android:textStyle="italic"
            android:layout_marginBottom="48dp" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:paddingHorizontal="32dp"
            android:textSize="14sp"
            android:textColor="#ffffff"
            android:backgroundTint="#4B0082"
            android:fontFamily="@font/exo_2_bold"
            android:elevation="10dp" />

    </LinearLayout>

</FrameLayout>
